# random-stuff

./: README.md  human-benchmark-com-aimbot.js  idnes-coin-collector-2023.py  margin_error_from_measurements_simple.py  obs-screen-switcher.py  rust-release-optimizations.toml
archive-github-repositories-locally/: .gitignore  README.md  archive-github-repositories-locally.sh
binance-test-USDTDAI-trading/: Cargo.toml  README.md
binance-test-USDTDAI-trading/src/: constants.rs  main.rs  types.rs
bit-packing-bool/: .gitignore  README.md  bit-packed-bool.c  show-bool-binary.c
html-homework-for-a-friend-31-05-2024/src/: about.html  dorty.html  index.html  kontakt.html  zakusky.html
linux-helpers/: .gitconfig  .tmux.conf  alacritty.yml  cisco-pt.desktop  git.bashrc  history.bashrc  pacman.bashrc  sys.bashrc  sys.cron  tmux.bashrc  zram-generator.conf
minecraft-plugins-2020-archive/: .gitignore  README.md
minecraft-plugins-2020-archive/Killer_Bot/: index.js  (+2 more)
moodle-docker-setup/: .gitignore  README.md  docker-compose.yaml
rust-bitcoin-node-interaction-test/: .gitignore  Cargo.toml  README.md  gen_bitcoin_rpc_auth.py
statistics-homework-for-a-friend-15-02-2024/: data_creator.py  file_to_process.xlsx  finished_analysis.xlsx  requirements.txt
tauri-microsoft-graphapi-auth-example/: .gitignore  README.md  package.json  tailwind.config.js
tauri-microsoft-graphapi-auth-example/src-tauri/: Cargo.toml  tauri.conf.json
tauri-microsoft-graphapi-auth-example/src-tauri/src/: commands.rs  config.rs  constants.rs  main.rs  models.rs  token.rs  utils.rs
youtube-downloader-clientside/: .gitignore  README.md
(+67 files in other folders)
