[package]
name = "binance-degen-trader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
binance_spot_connector_rust = { git = "https://github.com/binance/binance-spot-connector-rust", branch = "rc-1.1.0", features = ["full"]}
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
