[package]
name = "ms-todo-unofficial"
version = "0.0.1"
license = "../LICENSE"
description = "Unofficial cross-platform Microsoft To Do client"
repository = "https://github.com/TDiblik/ms-todo"
authors = ["Tomáš Diblík <dibla.tomas@post.cz>"]
edition = "2021"

[profile.release]
opt-level = 3
strip = "symbols"
lto = true

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tokio = "1.29.1"
tauri = { version = "1.4", features = ["shell-open"] }
tauri-plugin-deep-link = "0.1.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["blocking"] }
chrono = { version = "0.4.26",  features = ["serde"] }
anyhow = "1.0"
base64 = "0.21.2"
futures = "0.3.28"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
